# creativity-steer

./: .env.example  .gitignore  README.md  install.sh  mcp.json.example  pyproject.toml  start.sh  stop.sh
docs/: AGENT-INSTRUCTIONS-GROUNDING-MEMORY.md  CONCEPT.md  DEVELOPERS.md  GROUNDING-MEMORY-AND-TRAINING.md  PLAN.md  walkthrough.md
examples/: benchmark.py  calibrate_threshold.py  compare_embedders.py  compare_variant_sources.py  run_demo.py  smoke_ollama.py  stage1_demo.py  stage1_trajectory_demo.py  validate_selection.py
src/creativity_steer/: __init__.py  backends.py  chat.py  cli.py  config.py  consolidation.py  control.py  convergent.py  criteria.py  data.py  divergent.py  entailment.py  grounding.py  judge.py  mcp_client.py  memory.py  reference.py  scoring.py  selection.py  stage1.py  training_store.py  variants.py  webapp.py
tests/: test_chat.py  test_config.py  test_consolidation.py  test_control.py  test_grounding.py  test_judge.py  test_memory.py  test_metrics.py  test_pipeline.py  test_scoring.py  test_selection.py  test_stage1.py  test_training_store.py  test_trajectory.py  test_variants.py
web/: index.html  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/components/: ParetoPlot.tsx  Trace.tsx  VariantCard.tsx
